tests/rosetta/out/Erlang/abundant-deficient-and-perfect-number-classifications.error
run error: exit status 127
/workspace/mochi/tests/rosetta/out/Erlang/abundant-deficient-and-perfect-number-classifications.erl:8:60: syntax error before: 'rem'
escript: There were compilation errors.
